--- a/New TD Game/New TD Game.csproj
+++ b/New TD Game/New TD Game.csproj
@@ -4,10 +4,10 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{6F1831FB-DC0E-46B8-B3A7-DFD0068F7E71}</ProjectGuid>
+    <ProjectGuid>{C19847C4-0BB3-4D76-BB91-260967C9CB3E}</ProjectGuid>
     <OutputType>WinExe</OutputType>
-    <RootNamespace>WindowsFormsApp1</RootNamespace>
-    <AssemblyName>WindowsFormsApp1</AssemblyName>
+    <RootNamespace>New_TD_Game</RootNamespace>
+    <AssemblyName>New TD Game</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
